test/tests/errors/error-record-non-storeable.sm
// true
// false
// false
/**/
/**/

program {
    record x(a: proc());
}